test/typecheck/fail/abstract_bool_inconsistent.sail
default Order dec

$include <prelude.sail>

$option -abstract_types

type b : Bool

constraint b
constraint not(b)
